Ivan.png link issue

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <h2 class="tm-text-primary mb-4 tm-section-title">About</h2>
             <div class="ul-w-imagezoom-img-wrap">
               <figure class="effect-honey tm-gallery-item" style="float:left;margin:10px;">
-                <img src="./img/ivan.png" alt="Ivan and Janice" class="img-fluid">
+                <img src="./img/Ivan.png" alt="Ivan and Janice" class="img-fluid">
               </figure>
               <p>Founded in 2003 by Ivan and Janice, Celebration Samba embodies the soulful rhythms and vibrant energy
                 of traditional Samba music.</p>
