--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ const loadEvents = async () => {
       const eventHtml = `
       <a href="${event.html_link}">
         <figure class="effect-honey tm-gallery-item">
-          <img src="https://images.sociablekit.com/images/facebook-events/${event.event_id}" alt="${event.name}" class="img-fluid">
+          <img src="https://images.sociablekit.com/images/facebook-events/${event.event_id}.jpg" alt="${event.name}" class="img-fluid">
           <figcaption>
             <h2>
               <i>
