--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@ const loadEvents = async () => {
           <img src="/img/infinite-loop-01.jpg" alt="Past Events" class="img-fluid">
           <figcaption>
             <h2>
-              <i>
-                <span>Past Events</span>
+              <i>See all
+                <span>Past   Events</span>
               </i>
             </h2>
           </figcaption>
