--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container tm-container-gallery">
       <div class="row">
         <div class="text-center col-12">
-          <h2 class="tm-text-primary tm-section-title mb-4">Upcoming Events</h2>
+          <h2 class="tm-text-primary tm-section-title mb-4">Events</h2>
         </div>
       </div>
       <div class="row">
