--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ const loadEvents = async () => {
           <img src="/img/infinite-loop-01.jpg" alt="Past Events" class="img-fluid">
           <figcaption>
             <h2>
-              <i>See all
+              <i>See all<br>
                 <span>Past   Events</span>
               </i>
             </h2>
