Fix images for events

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ const loadEvents = async () => {
       const eventHtml = `
       <a href="${event.html_link}">
         <figure class="effect-honey tm-gallery-item">
-          <img src="https://images.sociablekit.com/images/facebook-page-events/158467/${event.event_id}.jpg" alt="${event.name}" class="img-fluid">
+          <img src="https://images.sociablekit.com/sources/facebook-page-events/103667822231138/${event.event_id}.webp" alt="${event.name}" class="img-fluid">
           <figcaption>
             <h2>
               <i>
